# crabcc

./: .actrc  .cccignore  .crabcc-cli.conf  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .mcp.json  .pr_agent.toml  .repomixignore  .tools  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  clippy.toml  crabcc-cleanup  deny.toml  flake.nix  install.sh  repomix.config.json  rust-toolchain.toml  rustfmt.toml
apps/crabcc-agents/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml
apps/crabcc-agents/.cargo/: config.toml
apps/crabcc-agents/agent-runner/: Dockerfile  entrypoint.sh  mcp.json  mini.yaml
apps/crabcc-agents/redis/: redis.conf
apps/crabcc-agents/scripts/: extract-anthropic-key.sh  start.sh
apps/crabcc-agents/src/: config.rs  discovery.rs  health.rs  job.rs  litellm.rs  main.rs  runner.rs  streams.rs
apps/crabcc-hitl-agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/crabcc-hitl-agent/tests/: test_chat.py  test_fetch_url.py  test_phase1_tools.py  test_phase2_approval.py  test_phase3_policy_audit.py  test_probes.py
apps/crabcc-telegram/: .dockerignore  .env.example  CHEATSHEET.md  Cargo.toml  Dockerfile  README.md  SYNC-CHECK.md  Taskfile.yml  docker-compose.yml  setup.sh
apps/crabcc-telegram/.cargo/: config.toml
apps/crabcc-telegram/src/: main.rs  mcp_client.rs
crates/crabcc-chrome/: Cargo.toml  README.md
crates/crabcc-chrome/src/: config.rs  framing.rs  host.rs  lib.rs  main.rs  pair.rs  serve.rs
crates/crabcc-cli/: .dockerignore  Cargo.toml  Dockerfile  build.rs
crates/crabcc-cli/src/: agent.rs  agent_bullmq.rs  agent_guard.rs  agent_profile.rs  agent_runs_db.rs  auto_index.rs  backup.rs  cli_config.rs  compress_cmd.rs  crawl_cmd.rs  csv.rs  debug_network.rs  doctor.rs  edit.rs  enrich_cmd.rs  fetch_cmd.rs  gateway.rs  go.rs  init_cmd.rs  install.rs  install_integrations.rs  jobs_cmd.rs  main.rs  manager.rs  media.rs  memory.rs  model_info.rs  morph.rs  netlog.rs  netlog_allowlist.txt  netlog_replay.jsonl  rag.rs  read.rs  research_cmd.rs  rewrite_log.rs  root_resolver.rs  run_cmd.rs  shell_context.rs  shell_rewrite.rs  squeeze.rs  (+5 more)
crates/crabcc-cli/tests/: agent_dry_run.rs  e2e_walkdir.rs  integration.rs
crates/crabcc-compact/: Cargo.toml
crates/crabcc-compact-serve/: Cargo.toml
crates/crabcc-compact-serve/src/: main.rs
crates/crabcc-compact/hooks/: claude-posttooluse.sh  claude-promptsubmit.sh
crates/crabcc-compact/src/: client.rs  coder.rs  compact_config.rs  compact_memory.rs  config.rs  enrich.rs  gate.rs  history.rs  lib.rs  main.rs  pipeline.rs  reasoner.rs  smoothness.rs  tokens.rs  traits.rs  types.rs
crates/crabcc-compact/tests/: compact_integration.rs
crates/crabcc-core/: Cargo.toml
crates/crabcc-core/benches/: alloc_ops.rs  compress_simd.rs  db_load.rs  extract.rs  fts_search.rs  symbols.rs
crates/crabcc-core/docs/: HOW_IT_WORKS.md
crates/crabcc-core/examples/: fts_profile.rs
crates/crabcc-core/fuzz/: .gitignore  Cargo.toml
crates/crabcc-core/src/: affected.rs  agent_runtime.rs  compress.rs  config.rs  extract.rs  fts.rs  gitdiff.rs  graph.rs  hash.rs  index.rs  jobs.rs  lib.rs  md.rs  ollama_stack.rs  outline.rs  parser_pool.rs  pattern.rs  query.rs  refs.rs  resolve.rs  service_discovery.rs  store.rs  time.rs  track.rs  types.rs  upgrade.rs  validate.rs  walker.rs  watch.rs
crates/crabcc-core/tests/: service_discovery_e2e.rs  v4_cross_functional.rs  v4_regression.rs
crates/crabcc-desktop/: Cargo.toml  README.md  Taskfile.yml
crates/crabcc-desktop/benches/: apply.rs  graph_layout.rs
crates/crabcc-desktop/docs/: DESIGN-BRIEF.md  DESIGN-PROMPTS.md  MCP-CONSENT.md  MCP-INSPECTOR.md  MCP-NATIVE.md  MCP-SAMPLING-OFFER.md  RESEARCH-apple-rich-notifications-dossier.md  RESEARCH-native-desktop-and-rich-notifications.md  REVIEW-state-rs.md  STACK-REVIEW.md
crates/crabcc-desktop/src/: about.rs  graph_layout.rs  home.rs  icons.rs  inspector.rs  lib.rs  main.rs  mcp_server.rs  native.rs  resources.rs  sampling.rs  services.rs  settings.rs  shell.rs  sse.rs  state.rs  theme.rs  theme_helpers.rs  toasts.rs  tools.rs
crates/crabcc-desktop/tests/: api_smoke.rs
crates/crabcc-fetch/: Cargo.toml
crates/crabcc-fetch/examples/: crawl_smoke.rs
crates/crabcc-fetch/src/: lib.rs
crates/crabcc-godfather/: Cargo.toml
crates/crabcc-godfather/benches/: insert_path.rs
crates/crabcc-godfather/src/: cleanup.rs  control.rs  event.rs  godfather.rs  host.rs  lib.rs  main.rs  report.rs  schema.rs  session.rs  watch.rs
crates/crabcc-mcp/: Cargo.toml  openapi.yaml
crates/crabcc-mcp/benches/: agent_profiles.rs  agent_workload.rs  mastodon_transport.rs  serve_io.rs
crates/crabcc-mcp/examples/: agent_replay.rs
crates/crabcc-mcp/src/: dashboard.html  dispatch.rs  lib.rs  mastodon.rs  memory.rs  ntfy.rs  schema.rs  test_support.rs  transport.rs
crates/crabcc-mcp/tests/: http_transport.rs
crates/crabcc-memory/: Cargo.toml
crates/crabcc-memory-bench/: Cargo.toml  README.md
crates/crabcc-memory-bench/src/: dataset.rs  eval.rs  main.rs
crates/crabcc-memory/examples/: cache_bench.rs
crates/crabcc-memory/schema/: 001_init.sql
crates/crabcc-memory/src/: embed.rs  lib.rs  loop_detect.rs  palace.rs  quant.rs  read.rs  shell.rs  test_support.rs  types.rs
crates/crabcc-viz/: Cargo.toml  README.md  build.rs  openapi.yaml
crates/crabcc-viz/assets/: eye.html  index.html  live.html  memory.html
crates/crabcc-viz/src/: banner.rs  bootstrap.rs  forge.rs  git_analytics.rs  graph.rs  lib.rs  memory_view.rs  memory_workspace.rs  query.rs  runtime.rs
crates/crabcc-viz/tests/: smoke.rs
crates/crabcc-viz/web/: .gitignore  (+5 more)
crates/sshq/: Cargo.toml  README.md
crates/swe-team/: Cargo.toml
crates/ucracc-lsp/: AGENTS.md  Cargo.toml  README.md
crates/wormhole-bpf/: Cargo.toml
crates/wormhole-node/: Cargo.toml
crates/wormhole-op/: Cargo.toml
crates/wormhole-proto/: Cargo.toml
crates/wormhole-relay/: Cargo.toml
(+925 files in other folders)
