[workspace]
resolver = "2"
members = [
    "crates/crabcc-cli",
    "crates/crabcc-core",
    "crates/crabcc-mcp",
    "crates/crabcc-memory",
    "crates/crabcc-memory-bench",
    "crates/crabcc-viz",
    # apps/crabcc-telegram: excluded from workspace — uses teloxide which
    # triggers a nightly libc ICE under -Z polonius + -Z randomize-layout.
    # Build standalone: cd apps/crabcc-telegram && cargo build --release
    # Track: https://github.com/rust-lang/rust/issues (libc ICE on nightly)
]

[workspace.package]
version = "2.11.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/peterlodri-sec/crabcc"

[workspace.dependencies]
crabcc-core = { path = "crates/crabcc-core" }
crabcc-mcp = { path = "crates/crabcc-mcp" }
crabcc-memory = { path = "crates/crabcc-memory" }
crabcc-viz = { path = "crates/crabcc-viz" }

anyhow = "1"
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
markdown = { version = "1", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsst-rs = "0.5"
ignore = "0.4"
grep = "0.3"
memchr = "2"
tantivy = "0.22"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
ast-grep-core = "0.30"
ast-grep-language = "0.30"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
libc = "0.2"
notify-debouncer-mini = "0.4"
sonic-rs = "0.3"
bumpalo = { version = "3", features = ["collections"] }
moka = { version = "0.12", features = ["sync"] }
fastembed = "5"
tiny_http = "0.12"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
redis   = { version = "0.27", default-features = false, features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.dev]
split-debuginfo = "unpacked"
# debug = 1 (line-tables-only) cuts macOS link time substantially on this
# workspace while still producing file:line backtraces in panics. lldb
# breakpoints stop working — devs who need them can override locally:
#   printf '[profile.dev]\ndebug = 2\n' >> .cargo/config.local.toml
# (config.local.toml is gitignored.)
debug = 1
# Nightly-only extras (polonius, randomize-layout) removed — see .cargo/config.toml
# for how to re-enable locally without breaking stable CI.

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
debug           = false
incremental     = false
split-debuginfo = "off"

[profile.dev-fast]
inherits        = "dev"
opt-level       = 1
debug           = 1
split-debuginfo = "unpacked"

[profile.test]
opt-level       = 1
split-debuginfo = "unpacked"
# Same rationale as `[profile.dev]`: line-tables-only is enough for the
# panic backtraces nextest prints, and shaves significant link time off
# the test rebuild loop.
debug           = 1

[profile.release-native]
inherits = "release"

[profile.profiling]
inherits      = "release"
debug         = "line-tables-only"
strip         = false
