[workspace]
resolver = "2"
exclude = [
    # See the inline comments in `members` for the rationale of each exclude.
    # `exclude` is required (not just absence-from-members) because cargo
    # otherwise auto-discovers nested Cargo.toml files when a path-dep
    # references them. See https://github.com/rust-lang/cargo/issues/9853.
    "crates/crabcc-viz",
    "crates/crabcc-desktop",
    # editors/zed/crabcc: the Zed extension compiles to wasm32-wasip1 via
    # zed_extension_api; it must not join the host workspace build. Built by
    # Zed itself (zed: install dev extension) or `cargo build --target
    # wasm32-wasip1` inside the crate.
    "editors/zed/crabcc",
]
members = [
    "crates/crabcc-cli",
    "crates/crabcc-core",
    "crates/crabcc-fetch",
    "crates/crabcc-godfather",
    "crates/crabcc-mcp",
    "crates/crabcc-memory",
    "crates/crabcc-memory-bench",
    "crates/ucracc-lsp",
    # crates/crabcc-viz: excluded from workspace — v4 CallGraph moved from
    # `BTreeMap<String, …>` to `BTreeMap<i64, …>` and the viz HTML/HTMX
    # renderer + GraphHit field-shape still expect the v3 name-keyed
    # surface (~20 errors across graph.rs + lib.rs). `crabcc serve` is
    # feature-gated behind `viz` in crabcc-cli, so the default build is
    # unaffected; viz catches up in v4.0.1 / v4.1. Build standalone:
    # cd crates/crabcc-viz && cargo build --release
    #
    # crates/crabcc-desktop: also excluded — gpui-component pulls a hard
    # dep on `tree-sitter = "0.25"` (links = "tree-sitter", so cargo
    # enforces a single version workspace-wide), and crabcc-core is on
    # tree-sitter 0.22 with its grammar fleet at 0.21. Joining the
    # workspace would force a coordinated tree-sitter-22→25 bump across
    # six grammar crates. The desktop crate talks to the rest of crabcc
    # over HTTP/SSE (loopback only), so no path dep is required —
    # standalone build keeps each side on its own pace.
    # Build: cd crates/crabcc-desktop && cargo run --release
]

[workspace.package]
version = "5.1.1"
edition = "2021"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/crabcc-labs/crabcc"

[workspace.dependencies]
crabcc-core = { path = "crates/crabcc-core" }
crabcc-fetch = { path = "crates/crabcc-fetch" }
crabcc-mcp = { path = "crates/crabcc-mcp" }
crabcc-memory = { path = "crates/crabcc-memory" }
crabcc-viz = { path = "crates/crabcc-viz" }

anyhow = "1"
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
markdown = { version = "1", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsst-rs = "0.5"
ignore = "0.4"
memchr = "2"
tantivy = "0.26"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-java = "0.23"
ast-grep-core = "0.42"
ast-grep-language = "0.42"
sha2 = "0.11"
tempfile = "3"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
libc = "0.2"
notify-debouncer-mini = "0.4"
sonic-rs = "0.5"
bumpalo = { version = "3", features = ["collections"] }
moka = { version = "0.12", features = ["sync"] }
fastembed = "5"
tiny_http = "0.12"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
redis   = { version = "0.28", default-features = false, features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
linkify = "0.11"
# html2md 0.2.x ships with `crate-type = ["rlib", "dylib", "staticlib"]`,
# which forces a `panic_unwind` runtime link and is incompatible with
# the workspace's `panic = "abort"` release profile (the only
# per-package escape hatch — `[profile.release.package.html2md]` —
# can't override `panic` because it's profile-wide). Upstream is also
# GPL-3.0+, which is a license downgrade for an MIT crate. `htmd` is
# the turndown.js-inspired Apache-2.0 replacement: rlib-only, single
# `htmd::convert(html) -> io::Result<String>` entrypoint, actively
# maintained on crates.io.
htmd = "0.5"

[profile.dev]
split-debuginfo = "unpacked"
# debug = 1 (line-tables-only) cuts macOS link time substantially on this
# workspace while still producing file:line backtraces in panics. lldb
# breakpoints stop working — devs who need them can override locally:
#   printf '[profile.dev]\ndebug = 2\n' >> .cargo/config.local.toml
# (config.local.toml is gitignored.)
debug = 1
# Nightly-only extras (polonius, randomize-layout) removed — see .cargo/config.toml
# for how to re-enable locally without breaking stable CI.

[profile.dev.package."*"]
opt-level = 1

# Build scripts and proc-macros run at compile time, then their *output*
# is what the user code calls. Compiling them at opt-level=3 takes a
# bit longer once but pays back many-fold across every rebuild because
# `syn` / `serde_derive` / `clap_derive` / `tracing-attributes` execute
# faster. Saves ~10-20s on cold builds in this workspace; sub-second
# on warm rebuilds adds up.
[profile.dev.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
debug           = false
incremental     = false
split-debuginfo = "off"

[profile.dev-fast]
inherits        = "dev"
opt-level       = 1
debug           = 1
split-debuginfo = "unpacked"

[profile.test]
opt-level       = 1
split-debuginfo = "unpacked"
# Same rationale as `[profile.dev]`: line-tables-only is enough for the
# panic backtraces nextest prints, and shaves significant link time off
# the test rebuild loop.
debug           = 1

# CI smoke-test profile — used by the 'build binary for smoke test' step in
# ci.yml. Inherits from dev (no LTO, fast link) with two CI-specific tweaks:
# incremental=false shrinks target/ by ~20% (fewer small files → faster cache
# save/restore); split-debuginfo=off drops .dwp sidecars on Linux.
[profile.ci]
inherits        = "dev"
debug           = 1
incremental     = false
split-debuginfo = "off"

[profile.release-native]
inherits = "release"

# Nightly hyper-optimized build profile. Used by `.github/workflows/
# nightly.yml` to produce per-target tarballs every second night from
# `main`.
#
# Today this profile is identical to `release` — the wins come from
# CI-side `RUSTFLAGS` (`-C target-cpu=x86-64-v3` on Linux x86_64,
# `-C target-cpu=apple-m1` on aarch64-apple-darwin) and post-link UPX
# packing on Linux. The named profile exists so future tweaks
# (PGO, BOLT, opt-level=z experiments) can be opted into for nightlies
# without touching the stable release path.
#
# DO NOT inline RUSTFLAGS here — they're target-specific, so they
# belong in the workflow matrix where each leg sets its own.
[profile.release-nightly]
inherits = "release"

[profile.profiling]
inherits      = "release"
debug         = "line-tables-only"
strip         = false
