[workspace]
resolver = "2"
exclude = []
members = [
	"crates/crabcc-cli",
	"crates/crabcc-compact",
	"crates/crabcc-core",
	"crates/crabcc-fetch",
	"crates/crabcc-mcp",
	"crates/crabcc-memory"
]

[workspace.package]
version = "6.5.1"
edition = "2021"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/crabcc-labs/crabcc"

[workspace.dependencies]
crabcc-compact = { path = "crates/crabcc-compact" }
crabcc-core = { path = "crates/crabcc-core" }
crabcc-fetch = { path = "crates/crabcc-fetch" }
crabcc-mcp = { path = "crates/crabcc-mcp" }
crabcc-memory = { path = "crates/crabcc-memory" }

postcard = { version = "1", features = ["alloc"] }
divan = "0.1"
blake3 = "1"
axum = { version = "0.8", features = ["ws"] }
rand = { version = "0.9", features = ["os_rng"] }
snow = "0.9"
spake2 = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio-tungstenite = "0.24"
getrandom = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

anyhow = "1"
ahash = "0.8"
rayon = "1"
atty = "0.2"
clap = { version = "4", features = ["derive", "env"] }
markdown = { version = "1", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fsst-rs = "0.5"
ignore = "0.4"
memchr = "2"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-zig = "1.1"
tree-sitter-md = "0.5"
tree-sitter-yaml = "0.7"
ast-grep-core = "0.44"
ast-grep-language = "0.44"
sha2 = "0.11"
tempfile = "3"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
libc = "0.2"
notify-debouncer-mini = "0.7"
sonic-rs = "0.5"
rmp-serde = "1"
flate2 = "1"
bumpalo = { version = "3", features = ["collections"] }
moka = { version = "0.12", features = ["sync"] }
fastembed = "5"
tiny_http = "0.12"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
serde_yml = "0.0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
# `socks` so `crabcc crawl --proxify socks4|socks5` can actually route
# through SOCKS proxies (without it reqwest::Proxy::all rejects socks:// URLs).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "socks"] }
linkify = "0.11"
# html2md 0.2.x ships with `crate-type = ["rlib", "dylib", "staticlib"]`,
# which forces a `panic_unwind` runtime link and is incompatible with
# the workspace's `panic = "abort"` release profile (the only
# per-package escape hatch — `[profile.release.package.html2md]` —
# can't override `panic` because it's profile-wide). Upstream is also
# GPL-3.0+, which is a license downgrade for an MIT crate. `htmd` is
# the turndown.js-inspired Apache-2.0 replacement: rlib-only, single
# `htmd::convert(html) -> io::Result<String>` entrypoint, actively
# maintained on crates.io.
htmd = "0.5"

[profile.dev]
split-debuginfo = "unpacked"
# debug = 1 (line-tables-only) cuts macOS link time substantially on this
# workspace while still producing file:line backtraces in panics. lldb
# breakpoints stop working — devs who need them can override locally:
#   printf '[profile.dev]\ndebug = 2\n' >> .cargo/config.local.toml
# (config.local.toml is gitignored.)
debug = 1
# Nightly-only extras (polonius, randomize-layout) removed — see .cargo/config.toml
# for how to re-enable locally without breaking stable CI.

[profile.dev.package."*"]
opt-level = 1

# Build scripts and proc-macros run at compile time, then their *output*
# is what the user code calls. Compiling them at opt-level=3 takes a
# bit longer once but pays back many-fold across every rebuild because
# `syn` / `serde_derive` / `clap_derive` / `tracing-attributes` execute
# faster. Saves ~10-20s on cold builds in this workspace; sub-second
# on warm rebuilds adds up.
[profile.dev.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
debug           = false
incremental     = false
split-debuginfo = "off"

[profile.dev-fast]
inherits        = "dev"
opt-level       = 1
debug           = 1
split-debuginfo = "unpacked"

[profile.test]
opt-level       = 1
split-debuginfo = "unpacked"
# Same rationale as `[profile.dev]`: line-tables-only is enough for the
# panic backtraces nextest prints, and shaves significant link time off
# the test rebuild loop.
debug           = 1

# CI smoke-test profile — used by the 'build binary for smoke test' step in
# ci.yml. Inherits from dev (no LTO, fast link) with two CI-specific tweaks:
# incremental=false shrinks target/ by ~20% (fewer small files → faster cache
# save/restore); split-debuginfo=off drops .dwp sidecars on Linux.
[profile.ci]
inherits        = "dev"
debug           = 1
incremental     = false
split-debuginfo = "off"

# CPU-native build — enables all instructions available on the build host
# (AVX2, SSE4.2, NEON, etc.). NEVER distribute this binary: it will SIGILL
# on CPUs missing the extended features. Use: cargo build --profile release-native
# with RUSTFLAGS="-C target-cpu=native" set in the environment.
[profile.release-native]
inherits = "release"

# Nightly hyper-optimized build profile. Pairs with nightly toolchain +
# RUSTFLAGS below for maximum throughput at the cost of stability guarantees.
#
# Build command:
#   RUSTFLAGS="-C target-cpu=native -Z mir-opt-level=4 -Z inline-mir=true" \
#   cargo +nightly build --profile release-nightly
#
# Flags explained:
#   -C target-cpu=native        — use all instructions the build host supports
#   -Z mir-opt-level=4          — max MIR optimization passes (nightly only)
#   -Z inline-mir=true          — cross-crate MIR inlining (nightly only)
#
# Stable proxy (no nightly required):
#   RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
[profile.release-nightly]
inherits = "release"

[profile.profiling]
inherits      = "release"
debug         = "line-tables-only"
strip         = false

# Size-optimized build. Shrinks the code section (~10 MB) by trading some
# inlining for smaller codegen; the 40 MB tree-sitter parse tables in
# __TEXT,__const are data, not code, so they are unaffected.
# Use: cargo build --profile release-compact
[profile.release-compact]
inherits      = "release"
opt-level     = "s"
