[package]
name = "crabcc-agents"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BullMQ-driven Claude Code agent runner — spawns sandboxed Docker containers, streams logs to Redis Streams"

[workspace]

[[bin]]
name = "crabcc-agents"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "io-util", "net"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

bullmq-rs          = "1"
redis              = { version = "0.28", features = ["tokio-comp", "connection-manager", "streams"] }
bollard            = { version = "0.17", default-features = false, features = ["ssl"] }
futures-util       = "0.3"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "serde"] }

# jemalloc — used for the Linux container build only. The worker is a
# long-running, multi-threaded process whose allocation profile (per-
# job tokio tasks + bollard Docker stream readers + redis async conns)
# benefits from jemalloc's lower fragmentation under sustained load.
# macOS dev builds keep the system allocator.
[target.'cfg(all(not(target_env = "msvc"), target_os = "linux"))'.dependencies]
tikv-jemallocator  = "0.6"
