[package]
name = "crabcc-telegram"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CrabCC_bot — Telegram interface for crabcc agents (issue #134)"
# Standalone crate — not in workspace (nightly libc ICE workaround).
# Build: cd apps/crabcc-telegram && cargo build --release

# Mark this manifest as its own workspace root so cargo doesn't try to attach
# it to the parent crabcc workspace at /Cargo.toml.
[workspace]

[[bin]]
name = "crabcc-telegram"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
teloxide           = { version = "0.13", default-features = false,
                       features = ["macros", "rustls"] }
reqwest            = { version = "0.12", default-features = false,
                       features = ["json", "rustls-tls"] }
