[package]
name = "crabcc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crabcc"
path = "src/main.rs"

# Issue #74 — high-level combo CLI. Subprocess wrapper around `crabcc`;
# same release profile (LTO=fat, strip=true). Co-installed by `cargo
# install --path crates/crabcc-cli` / `task install`.
[[bin]]
name = "ccc"
path = "src/bin/ccc.rs"

[features]
# Off in dev (saves ~60s on cold builds — tikv-jemalloc-sys's build
# script compiles jemalloc 5.x from C, single-translation-unit). Release
# builds enable it via `task build` / `task release` so the shipped
# binary still gets the +5-12% on alloc-heavy hot paths.
default = []
jemalloc = ["dep:tikv-jemallocator"]
# v3.0 (#62) — surfaces the SandboxRuntime stub. The actual microsandbox
# integration is deferred per `install/agent-runtime.md`; this feature
# only flips on the trait impl + a clearer "not yet implemented" error
# so callers can write code against the v3.0 API today.
agent-sandbox = []
# Dispatch agent runs through the BullMQ-backed crabcc-agents worker
# instead of the in-process subprocess runtime. Pulls in bullmq-rs +
# redis. Off by default — vanilla CLI users don't pay the dep cost.
# See apps/crabcc-agents/README.md for the worker side and
# `--transport bullmq` / `CRABCC_AGENT_TRANSPORT=bullmq` to opt in.
agents-bullmq = ["dep:bullmq-rs", "dep:redis", "dep:futures-util"]
# Optional dashboard / SSE viewer (`crabcc serve`). Pulls in tiny_http +
# tokio-rt + the entire `crabcc-viz` crate (~3500 LOC). Off by default
# so `cargo install crabcc-cli` is fast for users who only want the
# CLI surface (sym/refs/callers/outline/etc.) and the MCP server.
viz = ["dep:crabcc-viz"]
# Opt-in OTLP / Telegram / file-rotation tracing layers
# (telemetry::init's full pipeline). The base `tracing` macros remain
# compiled (they're cheap no-ops without a subscriber); only the heavy
# `tracing-subscriber` + `tracing-appender` init pulls in. Off by
# default for a lean default install.
telemetry = ["dep:tracing-subscriber", "dep:tracing-appender"]

[dependencies]
crabcc-core   = { workspace = true, features = ["jobs"] }
crabcc-fetch  = { workspace = true }
crabcc-mcp    = { workspace = true }
crabcc-memory = { workspace = true }
# `viz` feature — see [features]. Drops the dashboard / SSE viewer + its
# tokio-rt + tiny_http + html2md transitive cost from the default install.
crabcc-viz    = { workspace = true, optional = true }
anyhow        = { workspace = true }
clap          = { workspace = true }
tokio                    = { workspace = true }
reqwest                  = { workspace = true }
linkify                  = { workspace = true }
htmd                     = { workspace = true }
clap_complete = "4"
rusqlite      = { workspace = true }
# Issue #107 Phase 5a — `crabcc doctor` derives Serialize/Deserialize on
# its CheckResult / DoctorReport types directly (the surface the menubar
# app + Chrome extension consume).
# Issue #112 follow-up — `agent_profile` parses internal_agents/*.profile.toml
# via serde + toml. Same dep used twice; we add it once here.
serde         = { workspace = true }
serde_json    = { workspace = true }
# root_resolver — sha256-based cache key for `$CRABCC_HOME/repos/<key>/`.
sha2          = { workspace = true }
sonic-rs      = { workspace = true }
toml          = { workspace = true }
# `tracing` macros stay default — they're lightweight (compile away to
# no-ops without a subscriber). The heavy `tracing-subscriber` + the
# `tracing-appender` non-blocking writer move behind the `telemetry`
# feature so the default install path doesn't pay the compile cost.
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
tracing-appender   = { workspace = true, optional = true }

# agents-bullmq feature — see [features].
bullmq-rs    = { version = "1", optional = true }
redis        = { version = "1.2", default-features = false, features = ["tokio-comp", "connection-manager", "streams"], optional = true }
futures-util = { version = "0.3", optional = true }
# Issue #112 follow-up — jemalloc as the global allocator on the binary
# crate. ~5-12% on alloc-heavy paths (extract.rs, MCP serve_io). MSVC
# targets fall back to system allocator (cfg gate in main.rs). Optional
# behind the `jemalloc` feature so dev builds skip the 60s C-source
# build script; release/install paths enable it.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
