[package]
name = "crabcc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crabcc"
path = "src/main.rs"

# Issue #74 — high-level combo CLI. Subprocess wrapper around `crabcc`;
# same release profile (LTO=fat, strip=true). Co-installed by `cargo
# install --path crates/crabcc-cli` / `task install`.
[[bin]]
name = "ccc"
path = "src/bin/ccc.rs"

[features]
# Off in dev (saves ~60s on cold builds — tikv-jemalloc-sys's build
# script compiles jemalloc 5.x from C, single-translation-unit). Release
# builds enable it via `task build` / `task release` so the shipped
# binary still gets the +5-12% on alloc-heavy hot paths.
default = []
jemalloc = ["dep:tikv-jemallocator"]
# Allocator A/B candidate — benched against jemalloc + system to settle
# the shipped default. Gated `not(jemalloc)` in main.rs so the two never
# both claim #[global_allocator].
mimalloc = ["dep:mimalloc"]
# Real semantic embeddings for `crabcc rag` (MiniLM-L6-v2 via fastembed).
# NOT in `default`: ort fetches onnxruntime at build time (network) and
# the model is a ~25MB lazy runtime download. Enabled in the shipped
# build (`task build`/`install`/release) so users get semantic RAG while
# plain `cargo build` + CI stay lean and offline-safe.
memory-embed = ["crabcc-memory/memory-embed"]
# Opt-in OTLP / Telegram / file-rotation tracing layers
# (telemetry::init's full pipeline). The base `tracing` macros remain
# compiled (they're cheap no-ops without a subscriber); only the heavy
# `tracing-subscriber` + `tracing-appender` init pulls in. Off by
# default for a lean default install.
telemetry = ["dep:tracing-subscriber", "dep:tracing-appender", "dep:flate2"]

[dependencies]
walkdir = "2.5.0"
crabcc-core    = { workspace = true }
crabcc-mcp     = { workspace = true }
crabcc-memory  = { workspace = true }
crabcc-compact = { workspace = true }
crabcc-fetch   = { workspace = true, features = ["crawl"] }
# Image downscaling for the Read hook (`crabcc media downscale`): bound
# oversized screenshots/photos to Anthropic's effective vision resolution
# before the model reads them. png+jpeg only -> avoids the avif/exr/webp
# codec weight `image`'s defaults pull in (those still compile when
# fastembed enables them under crabcc-memory's `memory-embed`).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Optional global allocator — only built under the `mimalloc` feature
# (allocator bench candidate). See main.rs for the #[global_allocator] cfg.
mimalloc = { version = "0.1", optional = true, default-features = false }
ahash         = { workspace = true }
anyhow        = { workspace = true }
clap          = { workspace = true }
tokio                    = { workspace = true }
reqwest                  = { workspace = true }
linkify                  = { workspace = true }
htmd                     = { workspace = true }
clap_complete = "4"
rusqlite      = { workspace = true }
# `crabcc doctor` derives Serialize/Deserialize on its CheckResult /
# DoctorReport types directly (consumed by the Chrome extension + any
# JSON tooling).
# Issue #112 follow-up — `agent_profile` parses internal_agents/*.profile.toml
# via serde + toml. Same dep used twice; we add it once here.
serde         = { workspace = true }
serde_json    = { workspace = true }
# `crabcc run` background-process liveness: cross-platform process start-time +
# status, so the pid-reuse guard before `--kill` works on macOS/BSD too (not
# just Linux /proc). Already in the workspace via crabcc-godfather.
sysinfo       = { version = "0.39", default-features = false, features = ["system"] }
# root_resolver — sha256-based cache key for `$CRABCC_HOME/repos/<key>/`.
sha2          = { workspace = true }
sonic-rs      = { workspace = true }
toml          = { workspace = true }
# `tracing` macros stay default — they're lightweight (compile away to
# no-ops without a subscriber). The heavy `tracing-subscriber` + the
# `tracing-appender` non-blocking writer move behind the `telemetry`
# feature so the default install path doesn't pay the compile cost.
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
tracing-appender   = { workspace = true, optional = true }
# gzip the OTLP export body (telemetry feature only).
flate2             = { version = "1", optional = true }
# Issue #112 follow-up — jemalloc as the global allocator on the binary
# crate. ~5-12% on alloc-heavy paths (extract.rs, MCP serve_io). MSVC
# targets fall back to system allocator (cfg gate in main.rs). Optional
# behind the `jemalloc` feature so dev builds skip the 60s C-source
# build script; release/install paths enable it.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
