[package]
name = "crabcc-compact-serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crabcc-compact-serve"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
clap = { workspace = true, features = ["env"] }
pyo3 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http = "1"
tower = { version = "0.5", features = ["util"] }
